# NextPrep

./: .gitignore  CORE_WEB_VITALS.md  LICENSE  README.md  SEO_AUDIT.md  SEO_CHANGES.md  docker-compose.yml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_razorpay_account_id_to_users.py  0003_add_handle_new_user_trigger.py  0004_add_original_price_check.py  0005_create_reports.py  0006_remove_payments_add_reputation.py  0007_create_listing_views.py  0008_add_welcome_email_sent.py  0009_add_year_edition_to_listings.py  0010_widen_listings_year_range.py  0011_add_state_backfill_locations.py  0012_add_colleges.py
backend/app/: main.py
backend/app/constants/: locations.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py  supabase_admin.py
backend/app/jobs/: scheduler.py
backend/app/models/: __init__.py  college.py  conversation.py  listing.py  listing_view.py  message.py  report.py  seller_rating.py  transaction.py  user.py
backend/app/routers/: chat.py  colleges.py  listings.py  payments.py  reports.py  transactions.py  users.py
backend/app/schemas/: chat.py  college.py  listing.py  payment.py  report.py  transaction.py  user.py
backend/app/services/: chat_service.py  college_service.py  (+6 more)
backend/tests/: test_03-content-policy.py  test_04-notifications.py  test_06_schema.py  test_07_auth.py  test_09-payment.py  test_09-transactions.py  test_10_chat.py  test_13_api.py  test_14-listings-crud.py  test_15-college-communities.py
(+146 files in other folders)
